--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="icon" href="./assets/img/favicon.svg">
 		<!--==================== CSS ====================-->
 		<link rel="stylesheet" href="./assets/css/styles.css" />
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Paramjot Singh</title>
 	</head>
 	<body>
