--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<i class="uil uil-github"></i>
 							</a>
 							<a
-								href="https://medium.com/param373r"
+								href="https://medium.com/@param373r"
 								taget="_blank"
 								class="home__social-icon"
 							>
