--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
 							<div class="qualification__data">
 								
 								<div>
-									<h3 class="qualification__title">MERN Stack Developer</h3>
-									<span class="qualification__subtitle">Enlight Pvt. Ltd. - Part-time</span>
+									<h3 class="qualification__title">Frontend Developer</h3>
+									<span class="qualification__subtitle">Enlight Pvt. Ltd. - Intern</span>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
 										Jul 2022 - Oct 2022
